--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "Make Your URL Short",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -25,8 +28,5 @@
   "devDependencies": {
     "nodemon": "^2.0.12",
     "vite": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=12.0.0"
   }
 }
